--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+*.bin
 # Created by https://www.gitignore.io/api/python,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=python,jupyternotebooks,visualstudiocode
 
